--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,22 @@
 <html>
-    <head>
-        <title>Websocket - chatapp</title>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js" ></script>
-        <link rel="stylesheet" href="styles.css">
-    </head>
 
-    <body>
-       <h1>Woooo you see me</h1>
-       <script src="/chat.js"></script>
-    </body>
+<head>
+    <title>Websocket - chatapp</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
+    <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+    <div id="mario-chat">
+        <div id="chat-window">
+            <div id="output"> </div>
+        </div>
+        <input id="handle" type="text" placeholder="Handle" />
+        <input id="message" type="text" placeholder="Message" />
+        <button id="send">Send</button>
+    </div>
+
+    <script src="chat.js"></script>
+</body>
+
 </html>
